--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<?php header( 'Location: /index.html' ) ;  ?>
 <!DOCTYPE html>
 <html data-wf-page="5b4a7bfb5747fc629fa2d248" data-wf-site="5b4a7bfb5747fc8537a2d247">
 <head>
