modify logo link

--- a/home.html
+++ b/home.html
@@ -44,7 +44,7 @@
     </div>
   </div>
   <div class="container">
-    <div class="header-wrapper"><a href="index.html" class="w-inline-block w--current"><img src="images/logo.svg"></a>
+    <div class="header-wrapper"><a href="home.html" class="w-inline-block w--current"><img src="images/logo.svg"></a>
       <div class="main-navigaition">
         <div class="navigation"><a href="about.html" class="about-nav">about</a><a href="mailto:tichx@uw.edu?subject=Hi%20Nicholas!%20%E2%9C%8B" class="contact-nav">contact</a></div>
       </div>
@@ -79,7 +79,7 @@
     <div class="lets-work-together">
       <h1 class="titels-op-pagina">Let’s grab some coffee<br>if you're in Seattle.</h1>
       <div class="primary-tekst">Email address</div><a href="mailto:me@?subject=Hi%20Nicholas!%20%E2%9C%8B" class="secondary-tekst link">tichx@uw.edu</a></div>
-    <div class="footer"><a href="index.html" class="w-inline-block w--current"><img src="images/logo.svg"></a>
+    <div class="footer"><a href="home.html" class="w-inline-block w--current"><img src="images/logo.svg"></a>
       <div>
         <div class="text-footer">Have a great day. 😘</div>
       </div>
