--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
 </head>
 <body class="body-2">
   <div class="container">
-    <div class="header-wrapper"><a href="index.html" class="w-inline-block"><img src="images/logo.svg"></a>
+    <div class="header-wrapper"><a href="home.html" class="w-inline-block"><img src="images/logo.svg"></a>
       <div class="main-navigaition">
         <div class="navigation"><a href="about.html" class="about-nav w--current">about</a><a href="mailto:tichx@uw.edu?subject=Hi%20Nicholas!%20%E2%9C%8B" class="contact-nav">contact</a></div>
       </div>
@@ -97,7 +97,7 @@
         <div class="secondary-tekst nolink">Spotify (x1)</div>
       </div>
     </div><img src="images/belgium.png" class="made-in-belgium">
-    <div class="footer"><a href="index.html" class="w-inline-block"><img src="images/logo.svg"></a>
+    <div class="footer"><a href="home.html" class="w-inline-block"><img src="images/logo.svg"></a>
       <div>
         <div class="text-footer">Have a great day. 😘</div>
       </div>
