Added porfolio for summer 18.

--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Nicholas — Photographer, entrepreneur &amp; skateboarder.</title>
-  <meta content="I love taking photos while traveling " name="description">
+  <meta content="I love taking pictures while traveling. I also enjoy bringing value to people by crafting a satisfying experience." name="description">
   <meta content="Nicholas — Photographer, entrepreneur &amp; coffee snob." property="og:title">
   <meta content="I love taking pictures while traveling. I also enjoy bringing value to people by crafting a satisfying experience." property="og:description">
   <meta content="width=device-width, initial-scale=1" name="viewport">
@@ -52,7 +52,7 @@
       </div>
       <p data-w-id="adb42c44-7d71-7abb-8792-72028ebb7517" style="opacity:0;-webkit-transform:translateX(0) translateY(40PX) translateZ(0) scaleX(1) scaleY(1) scaleZ(1) rotateX(0) rotateY(0) rotateZ(0) skewX(0) skewY(0);-moz-transform:translateX(0) translateY(40PX) translateZ(0) scaleX(1) scaleY(1) scaleZ(1) rotateX(0) rotateY(0) rotateZ(0) skewX(0) skewY(0);-ms-transform:translateX(0) translateY(40PX) translateZ(0) scaleX(1) scaleY(1) scaleZ(1) rotateX(0) rotateY(0) rotateZ(0) skewX(0) skewY(0);transform:translateX(0) translateY(40PX) translateZ(0) scaleX(1) scaleY(1) scaleZ(1) rotateX(0) rotateY(0) rotateZ(0) skewX(0) skewY(0)" class="p hero">I love taking pictures while traveling. I also enjoy bringing value to people by crafting a satisfying experience. I often post photos or stories on <a href="https://www.instagram.com/5.8ft" target="_blank" class="homebiolinks">Instagram</a> Wanna talk about collaboration or startup ideas? Feel free to reach me at <a href="https://raw.githubusercontent.com/tichx/nicholas.is/master/static/wechat.JPG" target="_blank" class="homebiolinks">WeChat</a>, but enough about me, what about you?</p><a href="mailto:tichx@uw.edu?subject=Hi%20Nicholas!%20%E2%9C%8B" data-w-id="f046090f-614f-dc54-60ca-1a9fa9319855" style="opacity:0" class="a-links">tichx@uw.edu</a></div>
     <div class="cases-wrapper">
-      <a href="#" class="casezet w-inline-block">
+      <a href="su18" class="casezet w-inline-block">
         <div data-w-id="326da451-f264-d41f-84ca-598516991275" style="-webkit-transform:translateX(0) translateY(0PX) translateZ(0) scaleX(1) scaleY(1) scaleZ(1) rotateX(0) rotateY(0) rotateZ(0) skewX(0) skewY(0);-moz-transform:translateX(0) translateY(0PX) translateZ(0) scaleX(1) scaleY(1) scaleZ(1) rotateX(0) rotateY(0) rotateZ(0) skewX(0) skewY(0);-ms-transform:translateX(0) translateY(0PX) translateZ(0) scaleX(1) scaleY(1) scaleZ(1) rotateX(0) rotateY(0) rotateZ(0) skewX(0) skewY(0);transform:translateX(0) translateY(0PX) translateZ(0) scaleX(1) scaleY(1) scaleZ(1) rotateX(0) rotateY(0) rotateZ(0) skewX(0) skewY(0)" class="white-panel-reveal-case"></div>
         <div class="casetextwrapper">
           <h4 class="heading-2">Featured photos</h4>
